css/main.css
/* ... */
.linkback {
    position: absolute;
    top: 1.5rem;
    left: 0;
    align-self: start;
    background: url("/icons/long-arrow-left_x24.svg") no-repeat 1rem .3rem;
    height: 3rem;
    width: 4rem;
    filter: var(--shadow-dark-0);

    &:hover {
        background: rgba(1 1 1 / .3) url("/icons/long-arrow-left_x24_green.svg") no-repeat 1rem .3rem;
        border-radius: 0 1.5rem 1.5rem 0;
        filter: none;
    }
}

#artist-profile {
    &:hover {
        background: none;
    }
}


.artist-details-small {
    align-self: start;
    max-width: 100%;
    /*overflow-x: auto;*/
    flex-wrap: nowrap;
    z-index: 1000;
    margin-bottom: -2.4rem;
    transition-property: margin-bottom;
    transition-duration: .3s;
    transition-behavior: allow-discrete;

    @starting-style {
        margin-bottom: -1.6rem;
    }
    & p {
        margin: 0.3rem;
    }
    & .scroll {
        overflow-y: visible;
        padding: 0.4rem 0 0 0;
    }
    @media (max-width: 800px) {

        margin-bottom: -1.6rem;
        @starting-style {
            margin-bottom: -2.4rem;
        }
    }

}

.container {
    width: 100%;
    padding: 2.4rem;
    background: var(--grey-3);
    border-radius: var(--radius-lg);
    display: flex;
    flex-direction: column;
    gap: 2.4rem;
    transition: border-radius 500ms, padding 500ms;
    filter: var(--shadow-dark-0);

    &#filter-checkbox-locations {
        max-height: 20rem;
        display: flex;
        flex-direction: column;
        overflow-y: auto;
        padding: 0.2rem 0.8rem 0.2rem 0.2rem;
        width: 100%;
        gap: 0;
    }

    &#search-results > .scroll, &#artist-albums > .scroll{
        max-height: 50rem;
        overflow-x: hidden;
        display: flex;
        flex-direction: column;
        overflow-y: auto;
        width: 100%;
    }

    &#home-concerts, &#artist-albums, &#artist-concerts {

        & > * {
            &.go-across-lg, & .go-across-md {
                align-items: flex-start;
            }

            & .scroll {
                max-height: 30rem;
                overflow-y: auto;
                padding-right: 1.2rem;
                align-items: flex-start;
                gap: 0;

                & > * {
                    margin: 0;
                }
            }
        }
    }

    &#artist-albums {
        .container {
            padding-right: 0.4rem;
            padding-bottom: 0.8rem;
        }
    }

    &#artist-concerts, &#home-concerts {
        & > * {
            & .scroll {
                max-height: 50rem;
                gap: 0;

                @media (max-width: 550px){
                    max-height: 30rem;
                }
            }
        }
        @media (max-width: 800px) {
            max-height: fit-content;
        }
    }

    #home-artists, #home-albums, #home-concerts, #search-results, #artist-albums, #artist-concerts {
        transition: opacity 3s;
    }

    &#home-albums, &#home-artists, #artist-albums, #other-albums{
        overflow-y: hidden;
        padding: 2.4rem 0.4rem 0.4rem 0.4rem;
        @media (max-width: 800px) {
            padding: 1.6rem 0.4rem 0.4rem 0.4rem;
        }
        @media (max-width: 550px) {
            padding: 1.2rem 0.4rem 0.4rem 0.4rem;
        }

        & > * {
            padding: 0 2rem;
            @media (max-width: 800px) {
                padding: 0 1.2rem;
            }
            @media (max-width: 550px) {
                padding: 0 0.8rem;
            }
        }
    }


    &:has(.container) {
        padding: 0.4rem;
    }
    & .container {
        background: none;
        padding: 2rem;
        filter: none;
        @media (max-width: 800px) {
            padding: 0.8rem;
        }
    }

    &:has(#home-artists), &:has(#home-albums), &:has(#other-albums){
        padding: 0.4rem;
    }

    & .row {
        padding: 0;
        padding-bottom: 1.2rem !important;
    }



    @media (max-width: 800px) {
        border-radius:  var(--radius-md);
        padding: 1.2rem ;
        gap: 0.8rem;
    }
}

.logo-container {
    display: flex;
    flex-direction: column;
    gap: 0;

    & p {
        text-align: center;
        margin-top: 0;
    };
    & a {
        font-family: "Jockey One", serif;
        font-size: 8rem;
        font-weight: var(--font-weight-400);
        text-align: center;
        transition: font-size 500ms;
        margin-bottom: 0;
        line-height: 1.2;
        @media (max-width: 800px) {
            font-size: 6rem;
        }
    };
    & .sub-logo {
        opacity: 1;

        translate: 0 0;

        transition-property: translate, opacity;
        transition-duration: .3s;
        transition-behavior: allow-discrete;

        @starting-style{
            max-height: 100%;
            translate: 0 -1.2rem;
            opacity: 0;
        }
    }
}

.search-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    align-content:center;
    width: 100%;
    gap: 2.4rem;
    flex-grow: 1;

    & .search-input{
        display: flex;
        width:100%;
        justify-content: center;
        align-items: center;
        position:relative;
        min-width: 31.2rem;
        max-width: 48rem;
        filter: var(--shadow-dark-0);
        /*padding-right: 3.6rem;*/
        /*pointer-events: none;*/

        & #search-icon {
            position: absolute;
            top: 1.2rem;
            right: 1.6rem;
            width: 2.4rem;
            height: 2.4rem;
            cursor: pointer;
            /*display: none; !* Initially hidden *!*/
            background-size: contain; /* Ensure the icon is properly sized */
            background-image: var(--search-main-icon); /* Use your icon variable */
        }

        &:not(:placeholder-shown) ~ #clear-icon {
            display: block; /* Show clear icon when input has text */
        }

        &:hover {
            opacity: 90%;
        }
    }
}
/* ... */

